canary-deployment-with-kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kcd-canary-demo
  labels:
    app: kcd-canary-demo
spec:
  selector:
    app: kcd-canary-demo
  ports:
    - protocol: TCP
      port: 8187
      targetPort: http
