canary-deployment-with-kustomize/base/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: kcd-canary-demo
spec:
  host: kcd-canary-demo
  trafficPolicy:
    tls:
      mode: DISABLE
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
